--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <meta http-equiv="Cache-Control" content="no-store" />
 <head>
-  <title>Trello Tableau WDC</title>
+  <title>Trello Tableau WDC by Analytiks</title>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript"></script>
   <script src="https://online.tableau.com/javascripts/api/tableauwdc-1.1.0.js" type="text/javascript"></script>
 </head>
